@startuml ''

'tableau users

entity users {
  id : bigint
  first_name : varchar
  last_name : varchar
  email : varchar
  password : varchar
  role : varchar
  created_at : timestamp
  updated_at : timestamp
}

' table annonces 
entity annonces {
  id : bigint
  titre : varchar
  contenu : text
  type : varchar
  user_id : bigint
  created_at : timestamp
  updated_at : timestamp
}

' table demandes 

entity demandes {
  id : bigint
  type : varchar
  description : text
  status : varchar
  date : date
  user_id : bigint
  created_at : timestamp
  updated_at : timestamp
}

'table notifications

entity notifications {
  id : bigint
  message : text
  notifiable_type : varchar
  notifiable_id : bigint
  lu : boolean
  user_id : bigint
  created_at : timestamp
  updated_at : timestamp
}

'table taches

entity taches {
  id : bigint
  titre : varchar
  description : text
  status : varchar
  date_limite : timestamp
  created_by : bigint
  created_at : timestamp
  updated_at : timestamp
}

'table affectations

entity affectations {
  id : bigint
  tache_id : bigint
  user_id : bigint
  status : varchar
  created_at : timestamp
  updated_at : timestamp
}

'table reunions

entity reunions {
  id : bigint
  titre : varchar
  description : text
  date : date
  heure : time
  lieu : varchar
  user_id : bigint
  created_at : timestamp
  updated_at : timestamp
}

'table invitations

entity invitations {
  id : bigint
  reunion_id : bigint
  user_id : bigint
  status : varchar
  created_at : timestamp
  updated_at : timestamp
}

'table commentaires

entity commentaires {
  id : bigint
  user_id : bigint
  contenu : text
  commentable_type : varchar
  commentable_id : bigint
  created_at : timestamp
  updated_at : timestamp
}

users ||--o{ annonces
users ||--o{ demandes
users ||--o{ notifications
users ||--o{ taches : "created_by"
users ||--o{ affectations
users ||--o{ reunions
users ||--o{ invitations
users ||--o{ commentaires

taches ||--o{ affectations
reunions ||--o{ invitations

@enduml